--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,19 +1,18 @@
-.images-list .image-item {
-    width: 100%;
-    height: 100px;
-    cursor: pointer;
+.container{
+    min-height: 100vh;
+    padding: 0 0.5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
-
-.images-list .image-item img {
-    width: 100%;
-    height: 100px;
-    object-fit: cover;
-}
-
-.image-preview img {
-    width: 100%;
-    height: 500px;
-    object-fit: cover;
+.APlayer{
+    padding: 5rem 0;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 /* 
 
