--- a/src/js/component/AudioPlayer.module.css
+++ b/src/js/component/AudioPlayer.module.css
@@ -1,37 +1,64 @@
-.audioPlayer{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 700px;
+ .audioPlayer {
+     display: flex;
+     align-items: center;
+     justify-content: center;
+     height: 200px;
+     justify-content: space-between;
+ }
+
+ .foward {
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     font-size: 25px;
+     cursor: pointer;
+     border: none;
+     border-radius: 50%;
+     width: 45px;
+     height: 45px;
+     background: rgb(65, 60, 60);
+     box-shadow: 0px 0px 1px 3px grey;
+ }
+ .foward:active {
+    background-color: rgb(170, 170, 170);
+    border: 1px grey soldid;
 }
-.foward{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 15px;
-    cursor: pointer;
-    border: none; 
-    width: 45px;
-    height: 45px;
-    
-}
-.playBtn{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 20px;
-    width: 45px;
-    height: 45px;
-    font-size: 25px;
-    border: none;
-}
-.backward{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 15px;
-    cursor: pointer;
-    border: none;
-    width: 45px;
-    height: 45px;    
-}
+
+ .playBtn {
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     font-size: 20px;
+     width: 45px;
+     height: 45px;
+     font-size: 35px;
+     border-radius: 50%;
+     border: none;
+     background: rgb(65, 60, 60);
+     box-shadow: 0px 0px 1px 3px grey;
+ }
+
+ .playBtn:active {
+     background-color: rgb(170, 170, 170);
+     border: 1px grey soldid;
+ }
+
+ .backward {
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     font-size: 25px;
+     cursor: pointer;
+     border: none;
+     border-radius: 50%;
+     width: 45px;
+     height: 45px;
+     background: rgb(65, 60, 60);
+     box-shadow: 0px 0px 1px 3px grey;
+
+ }
+
+ .backward:active {
+     background-color: rgb(170, 170, 170);
+     border: 1px grey soldid;
+ }
