--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,27 +1,25 @@
-.container{
-    min-height: 100vh;
-    padding: 0 0.5rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-.APlayer{
-    padding: 5rem 0;
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-/* 
+ .container {
+     min-height: 100vh;
+     padding: 0 0.5rem;
+     display: flex;
+     flex-direction: column;
+     justify-content: center;
+     align-items: center;
+     background: rgb(124, 123, 123);     }
 
-    You can write your own styles here...
-    
-    
+ .APlayer {
+     padding: 5rem 0;
+     flex: 1;
+     display: flex;
+     flex-direction: column;
+     justify-content: center;
+     align-items: center;
+     background: rgb(124, 123, 123);     
+ }
+
+ /* 
+    You can write your own styles here...    
     ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
+    other sylesheets into your bunde as well, e.j:    
     import 'relative/path/to/stylesheet.scss';
-
 */
