--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -5,16 +5,20 @@
      flex-direction: column;
      justify-content: center;
      align-items: center;
-     background: rgb(124, 123, 123);     }
+     background: rgb(161, 160, 160);
+ }
 
  .APlayer {
+     max-height: 400px;
      padding: 5rem 0;
      flex: 1;
      display: flex;
      flex-direction: column;
      justify-content: center;
      align-items: center;
-     background: rgb(124, 123, 123);     
+     background: rgb(40, 156, 29);
+     border-radius: 15%;
+     
  }
 
  /* 
