--- a/src/js/component/AudioPlayer.module.css
+++ b/src/js/component/AudioPlayer.module.css
@@ -15,8 +15,7 @@
      border-radius: 50%;
      width: 45px;
      height: 45px;
-     background: orange;
-     box-shadow: 0px 0px 1px 3px grey;
+     background: rgb(255, 170, 12);     box-shadow: 0px 0px 1px 3px grey;
  }
  .foward:active {
     background-color: rgb(170, 170, 170);
@@ -33,8 +32,7 @@
      font-size: 35px;
      border-radius: 50%;
      border: none;
-     background: orange;
-     box-shadow: 0px 0px 1px 3px grey;
+     background: rgb(255, 170, 12);     box-shadow: 0px 0px 1px 3px grey;
  }
 
  .playBtn:active {
@@ -52,7 +50,7 @@
      border-radius: 50%;
      width: 45px;
      height: 45px;
-     background: orange;
+     background: rgb(255, 170, 12);
      box-shadow: 0px 0px 1px 3px grey;
 
  }
